--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
@@ -44,7 +54,6 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "eslint": "^4.19.1",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
@@ -53,15 +62,6 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
   },
   "jest": {
     "collectCoverageFrom": [
